# road-bundler

./: README.md  backend_bg.wasm  index.html
.github/workflows/: web.yml
assets/: backend_bg-6FmE9mjI.wasm  backend_bg-B2dHOISV.wasm  backend_bg-B86gW4YF.wasm  backend_bg-BTqNPC-I.wasm  backend_bg-BwJ4zKB2.wasm  backend_bg-Bwf9gEW3.wasm  backend_bg-BxszxS5t.wasm  backend_bg-C2OuZiMA.wasm  backend_bg-CiLcoJJV.wasm  backend_bg-Ci_OTPe1.wasm  backend_bg-CzxyLdOw.wasm  backend_bg-D7Z0Dqmj.wasm  backend_bg-DutjkZMI.wasm  backend_bg-LknyBhK9.wasm  backend_bg-U_UMB7AO.wasm  backend_bg.wasm  index-3a93c3b3.css  index-6dfe0726.css  index-93253ca8.css  index-b1334b41.css  index-d1e36358.css  index-d6545128.css  main-000a314c.js  main-024eb7d7.js  main-040c1d37.js  main-0c1bdff6.js  main-0deaecab.js  main-104c075a.js  main-10ba6a28.js  main-133304c2.js  main-154bba32.js  main-179524b1.js  main-2432d164.js  main-26e417e0.js  main-28b24354.js  main-28f126ef.js  main-2ac5c8e0.js  main-2dd50a65.js  main-2ee91b51.js  main-32d7a210.js  (+72 more)
backend/: Cargo.toml
backend/src/: amenities.rs  areas.rs  average_lines.rs  clean.rs  debugger.rs  dog_leg.rs  dual_carriageway.rs  faces.rs  graph.rs  join_lines.rs  kinds.rs  kmeans.rs  lib.rs  scrape_areas.rs  scrape_buildings.rs  sidepath.rs  slice_nearest_boundary.rs  split_line.rs  width.rs
backend/src/geo_helpers/: average_lines.rs  mod.rs  step_along_line.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.svelte  DebuggerLayer.svelte  DebuggerLegend.svelte  Edges.svelte  Faces.svelte  Intersections.svelte  (+4 more)
(+8 files in other folders)
