[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
geo = "0.31.0"
geojson = { git = "https://github.com/georust/geojson", features = ["geo-types"] }
itertools = "0.14.0"
log = "0.4.27"
osm-reader = { git = "https://github.com/a-b-street/osm-reader", features = ["serde"] }
rstar = "0.12.2"
serde = "1.0.219"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.140"
utils = { git = "https://github.com/a-b-street/utils", features = ["serde"] }
wasm-bindgen = "0.2.104"
web-sys = { version = "0.3.77", features = ["console"] }

# For local development, build dependencies in release mode once, but otherwise
# use dev profile and avoid wasm-opt.
[profile.dev.package."*"]
opt-level = 3
